# serializer version: 1
# name: test_script_ok[script_multi]
  '''
  SELECT col1 FROM table1; SELECT col2 FROM table2
  
  script
    query_expr
      select
        None
        select_list
          select_expr
            ident	col1
        from_clause
          from_item_table
            path_expression
              ident	table1
            None
            None
    query_expr
      select
        None
        select_list
          select_expr
            ident	col2
        from_clause
          from_item_table
            path_expression
              ident	table2
            None
            None
  '''
# ---
# name: test_script_ok[script_multi_with_trailing_semi]
  '''
  SELECT col1 FROM table1; SELECT col2 FROM table2;
  
  script
    query_expr
      select
        None
        select_list
          select_expr
            ident	col1
        from_clause
          from_item_table
            path_expression
              ident	table1
            None
            None
    query_expr
      select
        None
        select_list
          select_expr
            ident	col2
        from_clause
          from_item_table
            path_expression
              ident	table2
            None
            None
  '''
# ---
# name: test_script_ok[script_single]
  '''
  SELECT col1 FROM table1;
  
  query_expr
    select
      None
      select_list
        select_expr
          ident	col1
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  '''
# ---
# name: test_script_ok[script_top_level_from]
  '''
  FROM table1;
  
  query_expr
    pipe_from
      from_clause
        from_item_table
          path_expression
            ident	table1
          None
          None
  '''
# ---
